fixed color contrast

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -238,8 +238,12 @@ button {
     border: 2px solid var(--accent1-color);
 }
 
+.advertisement p {
+    color: black;
+}
+
 .advertisement a {
-    background-color: rgb(74, 74, 236);
+    background-color: rgb(30, 30, 173);
     color: white;
     padding: .5rem;
     border: 2px solid var(--accent1-color);
@@ -253,7 +257,7 @@ button {
 .adventure2 {
     grid-column: 3/4;
     place-items: center;
-    border: 5px solid var(--primary-color);
+    border: 5px solid var(--accent1-color);
 }
 
 .newsletter {
@@ -261,8 +265,9 @@ button {
     margin: 15px 12rem;
     place-items: center;
     font-weight: bold;
-    border: 5px solid var(--primary-color);
+    border: 5px solid var(--accent1-color);
     background-color: lightblue;
+    color: black;
 }
 
 .newsletter p {
@@ -276,6 +281,8 @@ button {
 
 .newsletter-button {
     width: 8rem;
+    margin-top: 5px;
+    border: 2px solid var(--accent1-color);
 }
 
 .details {
@@ -287,10 +294,11 @@ button {
 
 .details h2 {
     width: 100%;
+    color: black;
 }
 
 .details a {
-    background: rgb(45, 98, 116);
+    background: rgb(31, 85, 103);
     color: white;
     padding: 5px 15px;
     margin-top: 10px;
@@ -312,7 +320,7 @@ button {
     border: 2px solid var(--accent1-color);
     place-items: center;
     background-color: var(--secondary-color);
-    color: #264653;
+    color: black;
     font-weight: bold;
 }
 
